update after review of trainer
in next update css will get more classes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
     <article id ="gameContainer">
         <h1>Rock Paper Scissors<br>The Game</h1>
-        <!-- typofehler -->
         <section id="menu">
             <div id = "userSelection">
                 <label>Wähle deinen Kämpfer!</label>
@@ -27,7 +26,6 @@
                 <button id ="roundBTN">Bestätigen</button>
                 <input type="text" id="inputForRounds">
             </div>
-
         </section> 
         <section id = "showImgHere">
             <div id= "roundCounterField">
@@ -37,7 +35,7 @@
             <div id = "aiField">
                 <h1>AI</h1>
                 <p>Punkte: </p>
-                <p id = textPointsAI>
+                <p id = "textPointsAI">
                 </p>
                 <img src="http://upload.wikimedia.org/wikipedia/commons/c/ce/Transparent.gif">
             </div>
@@ -50,12 +48,10 @@
                 <img src="http://upload.wikimedia.org/wikipedia/commons/c/ce/Transparent.gif">
             </div> 
         </section>
-
         <aside>
             <h1>Ergebnis dieser Runde: </h1>
             <p id="roundResult"></p>
         </aside>  
-
     </article>
     <script src="SchStP.js"></script>
 </body>
